--- a/math/fastfood.html
+++ b/math/fastfood.html
@@ -39,7 +39,7 @@
 <div style="margin: auto auto; margin-top: 100px; width: 900px;">
 
   <div style="float: right;">
-      <a href="https://open.kattis.com/problems/semafori">Problem Description</a>
+      <a href="https://open.kattis.com/problems/fastfood">Problem Description</a>
     | <a href="https://github.com/jasonincanada/kattis/blob/master/src/FastFood.hs">My Haskell Solution</a>
   </div>
 
