--- a/math/fastfood.html
+++ b/math/fastfood.html
@@ -50,7 +50,7 @@
 
       $$v_1, v_2, \ldots, v_n.$$
 
-    Denote the number of required stickers for prize $i$, sticker type $j$ as $R_{i,j}$.
+    Denote the number of available stickers for prize $i$, sticker type $j$ as $R_{i,j}$.
   </p>
 
   <p>
