--- a/math/cursethedarkness.html
+++ b/math/cursethedarkness.html
@@ -57,8 +57,8 @@
     The answer $A$ to the problem is given by
 
       $$A := \begin{cases}
-              \text{light a candle},     & \gamma \ne \emptyset \\
-              \text{curse the darkness}, & otherwise
+              \text{light a candle},     & \text{if $\gamma \ne \emptyset$} \\
+              \text{curse the darkness}, & \text{otherwise}
              \end{cases}$$
   </p>
 
